force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/API_Loan_Calculator_Non_KPR__c.object-meta.xml
<CustomObject>
    <label>API Loan Calculator Non KPR</label>
    <nameField>
        <label>API Loan Calculator Non KPR  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Loan Calculator Non KPR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>