force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/admin_fee_capitalization_type__c.field-meta.xml
<CustomField>
    <fullName>admin_fee_capitalization_type__c</fullName>
    <label>admin_fee_capitalization_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>