force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/amortization_type__c.field-meta.xml
<CustomField>
    <fullName>amortization_type__c</fullName>
    <label>amortization_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>