force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/area_price_list_id__c.field-meta.xml
<CustomField>
    <fullName>area_price_list_id__c</fullName>
    <label>area_price_list_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>