force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/asset_insurance_coverage_type__c.field-meta.xml
<CustomField>
    <fullName>asset_insurance_coverage_type__c</fullName>
    <label>asset_insurance_coverage_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>