force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/building_value__c.field-meta.xml
<CustomField>
    <fullName>building_value__c</fullName>
    <label>building_value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>