force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/calculation_type__c.field-meta.xml
<CustomField>
    <fullName>calculation_type__c</fullName>
    <label>calculation_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>