force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/capitalized_ntf_amount__c.field-meta.xml
<CustomField>
    <fullName>capitalized_ntf_amount__c</fullName>
    <label>capitalized_ntf_amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>