force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/construction_class_code__c.field-meta.xml
<CustomField>
    <fullName>construction_class_code__c</fullName>
    <label>construction_class_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>