force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/credit_insurance_calculation_id__c.field-meta.xml
<CustomField>
    <fullName>credit_insurance_calculation_id__c</fullName>
    <label>credit_insurance_calculation_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>