force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/credit_insurance_premium__c.field-meta.xml
<CustomField>
    <fullName>credit_insurance_premium__c</fullName>
    <label>credit_insurance_premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>