force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/effective_rate__c.field-meta.xml
<CustomField>
    <fullName>effective_rate__c</fullName>
    <label>effective_rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>