force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/fiducia_fee__c.field-meta.xml
<CustomField>
    <fullName>fiducia_fee__c</fullName>
    <label>fiducia_fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>