force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/flat_rate_monthly__c.field-meta.xml
<CustomField>
    <fullName>flat_rate_monthly__c</fullName>
    <label>flat_rate_monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>