force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/Hubungan_Dengan_Nama_Di_Sertifikat__c.field-meta.xml
<CustomField>
    <fullName>Hubungan_Dengan_Nama_Di_Sertifikat__c</fullName>
    <label>Hubungan Dengan Nama Di Sertifikat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>