force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/incentive_amount__c.field-meta.xml
<CustomField>
    <fullName>incentive_amount__c</fullName>
    <label>incentive_amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>