force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/installment_scheme__c.field-meta.xml
<CustomField>
    <fullName>installment_scheme__c</fullName>
    <label>installment_scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>