force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/is_custom_pricing__c.field-meta.xml
<CustomField>
    <fullName>is_custom_pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_custom_pricing</label>
    <type>Checkbox</type>
</CustomField>