force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/is_potong_funding__c.field-meta.xml
<CustomField>
    <fullName>is_potong_funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_potong_funding</label>
    <type>Checkbox</type>
</CustomField>