force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/life_insurance_calculation_id__c.field-meta.xml
<CustomField>
    <fullName>life_insurance_calculation_id__c</fullName>
    <label>life_insurance_calculation_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>