force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/loan_amount__c.field-meta.xml
<CustomField>
    <fullName>loan_amount__c</fullName>
    <label>loan_amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>