force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/ltv_ratio__c.field-meta.xml
<CustomField>
    <fullName>ltv_ratio__c</fullName>
    <label>ltv_ratio</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>