force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/owner_asset__c.field-meta.xml
<CustomField>
    <fullName>owner_asset__c</fullName>
    <label>owner_asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>