force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/Perkiraan_Harga_Asset__c.field-meta.xml
<CustomField>
    <fullName>Perkiraan_Harga_Asset__c</fullName>
    <label>Perkiraan Harga Asset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>