force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/PRK_Interest__c.field-meta.xml
<CustomField>
    <fullName>PRK_Interest__c</fullName>
    <label>PRK Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>