force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/product_id__c.field-meta.xml
<CustomField>
    <fullName>product_id__c</fullName>
    <label>product_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>