force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/reverse_dp__c.field-meta.xml
<CustomField>
    <fullName>reverse_dp__c</fullName>
    <label>reverse_dp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>