force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/total_repayment__c.field-meta.xml
<CustomField>
    <fullName>total_repayment__c</fullName>
    <label>total_repayment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>