force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/total_reverse_down_payment__c.field-meta.xml
<CustomField>
    <fullName>total_reverse_down_payment__c</fullName>
    <label>total_reverse_down_payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>