force-app/main/default/objects/API_Loan_Calculator_Non_KPR__c/fields/used_new__c.field-meta.xml
<CustomField>
    <fullName>used_new__c</fullName>
    <label>used_new</label>
    <length>255</length>
    <type>Text</type>
</CustomField>